--- a/src/main/java/com/miage/gui/PanelHome.form
+++ b/src/main/java/com/miage/gui/PanelHome.form
@@ -277,7 +277,7 @@
               <Font name="Tempus Sans ITC" size="18" style="0"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
+              <Color id="Pointeur par d&#xe9;faut"/>
             </Property>
           </Properties>
           <Events>
